2005-11-14  Chris Toshok  <toshok@ximian.com>

	* CommaDelimitedStringCollection.cs: reformat things a bit, and
	flag ToString() as override.

	* DefaultSection.cs: new stubbed out implementation.

	* CommaDelimitedStringCollectionConverter.cs: new implementation.

2005-11-10  Chris Toshok  <toshok@ximian.com>

	* AppSettingsSection.cs (DeserializeElement): stop explicitly
	calling Settings.DeserializeElement, as the DefaultCollection
	works now.

	* ConfigurationElement.cs (DeserializeElement): rework the loop
	here so that we actually loop over all the content elements.

2005-11-09  Chris Toshok  <toshok@ximian.com>

	* ConfigurationElement.cs: Add support for DefaultCollection
	attributes.

	* PropertyInformation.cs (PropertyInformation.Value): add case for
	IsDefaultCollection.

	* SectionGroupInfo.cs (SectionGroupInfo.ReadConfig): when we read
	a "type" attribute, make sure the cached System.Type is cleared.

2005-10-25  Chris Toshok  <toshok@ximian.com>

	* InfiniteTimeSpanConverter.cs: new implementation.

	* InfiniteIntConverter.cs: new implementation.

	* GenericEnumConverter.cs: new implementation.

	* Configuration.cs: we don't need to check with "is" after we use
	"as"..  just check for null-ness.

	* KeyValueConfigurationCollection.cs: GetElementKey should throw
	NRE if element == null.

	* CommaDelimitedStringCollection.cs: raise the correct exceptions
	in the read only case, and return null from ToString if there are
	0 elements.

2005-10-25  Chris Toshok  <toshok@ximian.com>

	* PositiveTimeSpanValidatorAttribute.cs: new implementation.

	* PositiveTimeSpanValidator.cs: new implementation.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* TimeSpanSecondsOrInfiniteConverter.cs: new implementation.

	* TypeNameConverter.cs: new implementation.

	* WhiteSpaceTrimStringConverter.cs: new implementation.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* AppSettingsSection.cs (DeserializeElement, SerializeSection):