@@ -1,3 +1,11 @@
+2005-11-24  Chris Toshok  <toshok@ximian.com>
+
+	* ConfigurationElement.cs (ElementProperty): make this protected
+	internal virtual instead of public.
+	(SetPropertyValue): add a validator call and a blurb about the
+	code based on information gleaned from tests.
+	(set_Item (string)): call SetPropertyValue in the setter.
+	
 2005-11-14  Chris Toshok  <toshok@ximian.com>
 
 	* CommaDelimitedStringCollection.cs: reformat things a bit, and
